[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/characters/enemies/Enemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 200.0

[sub_resource type="CircleShape2D" id=2]
radius = 300.0

[node name="Enemy" groups=[
"enemy",
] instance=ExtResource( 1 )]
collision_layer = 2
collision_mask = 19
script = ExtResource( 2 )

[node name="EnemyAnimations" type="AnimationPlayer" parent="." index="3"]

[node name="AggroArea" type="Area2D" parent="." index="4"]
monitorable = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroArea" index="0"]
shape = SubResource( 1 )

[node name="DeaggroArea" type="Area2D" parent="." index="5"]
monitorable = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeaggroArea" index="0"]
shape = SubResource( 2 )
[connection signal="body_entered" from="AggroArea" to="." method="_on_AggroArea_body_entered"]
[connection signal="body_exited" from="DeaggroArea" to="." method="_on_DeaggroArea_body_exited"]
